src/objects/Competitor__c.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Competitor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <description>Please indicate the competitor for this opportunity.</description>
        <inlineHelpText>Please indicate the competitor for this opportunity.</inlineHelpText>
        <label>Competitor</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>The competitor can only be selected once. Please select another competitor.</errorMessage>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Competitor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitive Opportunities</relationshipLabel>
        <relationshipName>Competitors</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Incumbent_F__c</fullName>
        <description>This field is a one click checkbox used for the Competitor related list on Opportunities</description>
        <formula>IF(Incumbent__c = True, 
HYPERLINK(&quot;/&quot; &amp; Id &amp; &quot;/e?save=1&amp;00NE00000038Wg6=0&amp;retURL=%2F&quot; &amp; Opportunity__r.Id &amp; &quot;%23&quot; &amp; Opportunity__r.Id &amp; &quot;_00NE00000038WfU_target&quot;, 
IMAGE(&quot;http://free-121d5f44d20-121d603d1c5-121ee2b8103.force.com/img/checkbox_checked.gif&quot;, &quot;X&quot;), &quot;_top&quot;), 
HYPERLINK(&quot;/&quot; &amp; Id &amp; &quot;/e?save=1&amp;00NE00000038Wg6=1&amp;retURL=%2F&quot; &amp; Opportunity__r.Id &amp; &quot;%23&quot; &amp; Opportunity__r.Id &amp; &quot;_00NE00000038WfU_target&quot;,
IMAGE(&quot;http://free-121d5f44d20-121d603d1c5-121ee2b8103.force.com/img/checkbox_unchecked.gif&quot;, &quot;X&quot;), &quot;_top&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Incumbent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incumbent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This indicates the current technology solution being leveraged at the organization.</description>
        <inlineHelpText>Is this competitor also the incumbent tool?</inlineHelpText>
        <label>Incumbent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Competitors</relationshipLabel>
        <relationshipName>Competitors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Replacement_F__c</fullName>
        <description>This field is a one click checkbox used for the Competitor related list on Opportunities</description>
        <formula>IF(Replacement__c = True,
HYPERLINK(&quot;/&quot; &amp; Id &amp; &quot;/e?save=1&amp;00NE00000038Wg8=0&amp;retURL=%2F&quot; &amp; Opportunity__r.Id &amp; &quot;%23&quot; &amp; Opportunity__r.Id &amp; &quot;_00NE00000038WfU_target&quot;,
IMAGE(&quot;http://free-121d5f44d20-121d603d1c5-121ee2b8103.force.com/img/checkbox_checked.gif&quot;, &quot;X&quot;), &quot;_top&quot;),
HYPERLINK(&quot;/&quot; &amp; Id &amp; &quot;/e?save=1&amp;00NE00000038Wg8=1&amp;retURL=%2F&quot; &amp; Opportunity__r.Id &amp; &quot;%23&quot; &amp; Opportunity__r.Id &amp; &quot;_00NE00000038WfU_target&quot;,
IMAGE(&quot;http://free-121d5f44d20-121d603d1c5-121ee2b8103.force.com/img/checkbox_unchecked.gif&quot;, &quot;X&quot;), &quot;_top&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Replacement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Replacement__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is MicroStrategy replacing the incumbent?</inlineHelpText>
        <label>Replacement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, &quot;View&quot;, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Won__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Won</label>
        <type>Checkbox</type>
    </fields>
    <label>Competitor</label>
    <nameField>
        <label>Competitor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>